# qa-microservices-lab

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pytest.ini
.github/workflows/: ci.yml
services/sample-api/: Dockerfile  pyproject.toml  requirements.txt
services/sample-api/sample_api/: db.py  main.py  models.py
services/sample-api/tests/: test_health.py
services/sample-api/tests/integration/: test_items_db.py
