[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "httpx==0.27.2",
  "SQLAlchemy==2.0.36",
  "psycopg[binary]==3.2.3",
]

[project.optional-dependencies]
test = [
  "pytest==8.3.4",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["sample_api*"]
